--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -144,5 +144,10 @@
             <version>1.69</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.47</version>
+        </dependency>
     </dependencies>
 </project>
